--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "8.3.0",
     "mongodb": "^3.1.8",
     "mongoose": "^5.3.7",
+    "nodemailer": "^4.6.8",
     "nodemon": "^1.18.5"
   },
   "scripts": {
